<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedBuddy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_p_child_control_panel">P_childControlPanel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_p_quicklog">P_quicklog</string>
    <string name="title_activity_p__medication">P_Medication</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="txt_confirmPassword">Confirm Password</string>
    <string name="txt_phoneNum">Phone Number (Optional)</string>
    <string name="txt_name">First Name, Last Name (Optional)</string>
    <string name="txt_signUp">Sign Up</string>

    <color name="color_blue">#3399CC</color>

    <string name="add">String</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="ac_name">Name (First, Last)</string>
    <string name="ac_age">Age</string>
    <string name="txt_ac_username">Username</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_p_child_list">P_childList</string>
    <string name="title_activity_c_main">C_mainActivity</string>
    <string name="title_section0">Medication</string>
    <string name="title_section1">Reward</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Profile</string>
    <string name="title_section4">Quicklog</string>
    <string name="title_activity_activity_login">ActivityLogin</string>
    <string name="title_activity_p_child_contral_panel">P_childContralPanel</string>
    <string name="title_activity_medication">Medication</string>
    <string name="title_activity_reward">Reward</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_quicklog">Quicklog</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add__medication">Add Medication</string>
    <string name="title_activity_reward_shop">RewardShop</string>
    <string name="reward_cag1">Events</string>
    <string name="reward_cag2">Hairs</string>
    <string name="reward_cag3">Teeth</string>
    <string name="reward_cag4">Eyes</string>
    <string name="reward_cag5">Hats</string>
    <string name="title_activity_r_event">R_event</string>
    <string name="title_activity_r_hairs">R_hairs</string>
    <string name="title_activity_c_quiz">C_quiz</string>
    <string name="quiz_answer1">A. Hay Fever</string>
    <string name="quiz_answer2">B. Asthma</string>
    <string name="quiz_answer3">C. Eczema</string>
    <string name="quiz_answer4">D. All of above</string>
    <string name="quiz_question">Which of following diseases is caused by an allergy?</string>
    <string name="title_activity_r_teeth">R_teeth</string>
    <string name="title_activity_r_teeths">R_teeths</string>
    <string name="title_activity_r_eyes">R_eyes</string>
    <string name="title_activity_r_hats">R_hats</string>
    <string name="title_activity_add__reward">Add_Reward</string>

</resources>