<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/personalavator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="33dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/txt_ac_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/quickContactBadge1"
        android:layout_marginLeft="33dp"
        android:hint="@string/ac_name" />

    <EditText
        android:id="@+id/txt_ac_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ac_name"
        android:layout_below="@+id/txt_ac_username"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_ac_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ac_name"
        android:layout_below="@+id/txt_ac_name"
        android:ems="10"
        android:hint="@string/txt_ac_username" />

    <EditText
        android:id="@+id/txt_ac_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ac_name"
        android:layout_below="@+id/txt_ac_password"
        android:ems="10"
        android:hint="@string/txt_confirmPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/childregisterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ac_name"
        android:layout_alignRight="@+id/txt_ac_username"
        android:layout_below="@+id/txt_ac_confirmpassword"
        android:text="DONE" />

</RelativeLayout>