<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#241f05"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Quiz"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/quiz_question"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/answer1"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="| "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff004e"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/l_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_answer1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer2"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="| "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fcff00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/l_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_answer2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer3"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="| "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00c6ff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/l_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_answer3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer4"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="| "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#52e800"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/l_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_answer4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:src="@drawable/monster" />

</LinearLayout>